--- a/app/javascript/dashboard/i18n/locale/pt_BR/chatlist.json
+++ b/app/javascript/dashboard/i18n/locale/pt_BR/chatlist.json
@@ -53,10 +53,10 @@
     },
     "SORT_ORDER_ITEMS": {
       "last_activity_at_asc": {
-        "TEXT": ""
-      },
-      "last_activity_at_desc": {
         "TEXT": "Última atividade: Recentes primeiro"
+      },
+      "sort_on_created_at": {
+        "TEXT": "Criado em"
       },
       "created_at_desc": {
         "TEXT": "Criado em: Recentes primeiro"
