feat: Conversation sort old activity

--- a/app/javascript/dashboard/i18n/locale/pt_BR/chatlist.json
+++ b/app/javascript/dashboard/i18n/locale/pt_BR/chatlist.json
@@ -58,6 +58,9 @@
       "last_activity_at_desc": {
         "TEXT": "Última atividade: Recentes primeiro"
       },
+      "sort_on_created_at": {
+        "TEXT": "Criado em"
+      },
       "created_at_desc": {
         "TEXT": "Criado em: Recentes primeiro"
       },
