feat: Conversation sort old activity

--- a/app/javascript/dashboard/i18n/locale/en/chatlist.json
+++ b/app/javascript/dashboard/i18n/locale/en/chatlist.json
@@ -55,6 +55,9 @@
       "latest": {
         "TEXT": "Last activity"
       },
+      "oldest": {
+        "TEXT": "Old activity"
+      },
       "sort_on_created_at": {
         "TEXT": "Created at"
       },
