feat: Add SLA header component (#9129)
Co-authored-by: Shivam Mishra <scm.mymail@gmail.com>
Co-authored-by: Pranav <pranav@chatwoot.com>

--- a/app/javascript/dashboard/i18n/locale/en/sla.json
+++ b/app/javascript/dashboard/i18n/locale/en/sla.json
@@ -1,6 +1,9 @@
 {
   "SLA": {
     "HEADER": "SLA",
+    "ADD_ACTION": "Add SLA",
+    "DESCRIPTION": "Service Level Agreements (SLAs) are contracts that define clear expectations between your team and customers. They establish standards for response and resolution times, creating a framework for accountability and ensures a consistent, high-quality experience.",
+    "LEARN_MORE": "Learn more about SLA",
     "HEADER_BTN_TXT": "Add SLA",
     "LOADING": "Fetching SLAs",
     "SEARCH_404": "There are no items matching this query",
@@ -9,7 +12,14 @@
       "404": "There are no SLAs available in this account.",
       "TITLE": "Manage SLA",
       "DESC": "SLAs: Friendly promises for great service!",
-      "TABLE_HEADER": ["Name", "Description", "FRT", "NRT", "RT", "Business Hours"]
+      "TABLE_HEADER": [
+        "Name",
+        "Description",
+        "FRT",
+        "NRT",
+        "RT",
+        "Business Hours"
+      ]
     },
     "FORM": {
       "NAME": {
