--- a/app/javascript/dashboard/i18n/locale/en/inboxMgmt.json
+++ b/app/javascript/dashboard/i18n/locale/en/inboxMgmt.json
@@ -340,6 +340,24 @@
           "ERROR_MESSAGE": "We were not able to save the telegram channel"
         }
       },
+      "SIP_CHANNEL": {
+        "TITLE": "Sip Channel",
+        "DESC": "Integrate with Sip channel and start suppot call your customers.",
+        "CHANNEL_NAME": {
+          "LABEL": "Inbox Name",
+          "PLACEHOLDER": "Enter your inbox name (eg: Acme Inc)",
+          "ERROR": "Please enter a valid inbox name"
+        },
+        "URL": {
+          "LABEL": "URL",
+          "SUBTITLE": "Configure the websocket url to connect to your sip server.",
+          "PLACEHOLDER": "Websocket URL"
+        },
+        "SUBMIT_BUTTON": "Create Sip Channel",
+        "API": {
+          "ERROR_MESSAGE": "We were not able to save the sip channel"
+        }
+      },
       "AUTH": {
         "TITLE": "Choose a channel",
         "DESC": "Chatwoot supports live-chat widgets, Facebook Messenger, WhatsApp, Emails, etc., as channels. If you want to build a custom channel, you can create it using the API channel. To get started, choose one of the channels below."
