--- a/app/javascript/dashboard/i18n/locale/en/webphone.json
+++ b/app/javascript/dashboard/i18n/locale/en/webphone.json
@@ -1,24 +1,26 @@
 {
   "WEBPHONE": {
-    "CALL": "Ligar",
-    "TERMINATE": "Finalizada",
-    "ACCEPT_ELSEWHERE": "Aceito por outro usuário",
-    "REJECT_ELSEWHERE": "Rejeitado por outro usuário",
-    "CONNECT_CALLING": "Ligando",
-    "CALLING": "Chamando",
-    "VOICE_CALL": "Chamada de voz",
-    "IN_PROGRESS": "Em progresso",
-    "ACTIVE": "Ativa",
-    "MUTE": "Desativar microphone",
-    "UNMUTE": "Ativar microphone",
-    "TURN_ON_VIDEO": "Ativar video",
-    "TURN_OFF_VIDEO": "Desativar video",
-    "NUMPAD": "Teclado",
-    "TRANSFER": "Transferir",
-    "UNKNOWN": "Desconhecido",
-    "ALL_INSTANCE_BUSY": "Todas as linhas estão ocupadas",
-    "CONTACT_INVALID": "Contato não existe no Whatsapp",
-    "CALL_LIMIT": "Limite de ligações diários atingido",
-    "ERROR_TO_MADE_CALL": "Ocorreu um erro ao tentar ligar"
+    "CALL": "Call",
+    "TERMINATE": "Terminated",
+    "ACCEPT_ELSEWHERE": "Accepted by another user",
+    "REJECT_ELSEWHERE": "Rejected by another user",
+    "CONNECT_CALLING": "Connecting",
+    "CALLING": "Calling",
+    "VOICE_CALL": "Voice call",
+    "IN_PROGRESS": "In progress",
+    "ACTIVE": "Active",
+    "MUTE": "Mute microphone",
+    "UNMUTE": "Unmute microphone",
+    "TURN_ON_VIDEO": "Turn on video",
+    "TURN_OFF_VIDEO": "Turn off video",
+    "NUMPAD": "Keypad",
+    "TRANSFER": "Transfer",
+    "UNKNOWN": "Unknown",
+    "ALL_INSTANCE_BUSY": "All lines are busy",
+    "CONTACT_INVALID": "Contact does not exist on WhatsApp",
+    "CALL_LIMIT": "Daily call limit reached",
+    "ERROR_TO_MADE_CALL": "An error occurred while trying to call",
+    "CONNECTION_FAILED": "Connection failed",
+    "REJECTED": "Rejected"
   }
 }
